--- a/public/css/pixhub.scss
+++ b/public/css/pixhub.scss
@@ -236,6 +236,7 @@ a:focus {
 	background-color: black;
 	height: 100%;
 	min-height: 300px;
+	text-align: left;
 	width: 100%;
 
 	display: flex;
